# sampleproj

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  common.cpp  common.h
test/: CMakeLists.txt  hello_test.cc
